<resources>

    <!--String JAVA -->

    <string name="app_name">Remember me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="personal_date">Datos personales</string>
    <string name="phone">Números de contacto</string>
    <string name="Send_email">Enviar correo al autor</string>
    <string name="age">Edad: 25 años</string>
    <string name="born">Nacimiento: 10&#8211;01&#8211;1992</string>
    <string name="location">Ubicación: Caracas&#8211;Venezuela</string>
    <string name="passport">Pasaporte: 104472387</string>
    <string name="phone1">+584248771055</string>
    <string name="phone2">+584241286080</string>
    <string name="title_btn_view_add">Aceptar</string>
    <string name="title_btn_view_update">Actualizar</string>
    <string name="error_select_memories_toupdate">Error. Seleccione el recuerdo que desea actualizar</string>
    <string name="error_select_memories_todelete">Error. Seleccione el recuerdo que desea eliminar</string>
    <string name="warning_delete_memories">¿Quieres eliminar el recuerdo\u0020</string>
    <string name="deleted_memories">Se eliminó\u0020</string>
    <string name="should_permise_camera">Debes conceder permisos para utilizar la camara</string>
    <string name="error_">Debes conceder permisos para utilizar la camara</string>
    <string name="error_fill_all_data">Por favor ingrese todos los datos</string>
    <string name="duplicate_memories">Ya existe un recuerdo con este título</string>
    <string name="memorie_added">Recuerdo agregado exitosamente</string>
    <string name="memorie_update">Recuerdo actualizado exitosamente</string>
    <string name="photo_not_captured">No se pudo tomar la foto</string>

    <!--String XML-->
    <string name="main_act_nothing_to_show">No tienes recuerdos para mostrar&#8230;</string>
    <string name="add_update_view_title">Título</string>
    <string name="add_update_view_description">Descripción</string>
    <string name="add_update_view_date">Fecha:</string>
    <string name="memories_item_title">Título</string>
    <string name="memories_item_date">Fecha:</string>
    <string name="memories_item_description">Descripción</string>
    <string name="view_more_title">Título</string>
    <string name="view_more_date">Fecha:</string>
    <string name="view_more_description">Descripción:</string>
    <string name="nav_view_name">Ing. Francisco Monasterios</string>
    <string name="nav_view_email">Fammelectronica@gmail.com</string>
    <string name="nav_view_coment">Android Developer</string>
</resources>
