<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            >

            <TextView
                android:text="@string/memories_item_title"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/title"
                android:textSize="20sp">

        </TextView>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView

                    android:text="@string/memories_item_date"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:textSize="15sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/date"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="1"
                    android:scrollHorizontally="true"
                    android:textSize="15sp">
                </TextView>


            </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:text="@string/memories_item_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/description"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="1"
                        android:scrollHorizontally="true"
                        android:textSize="15sp">
                    </TextView>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>