<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:orientation="horizontal" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageViewvermas"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@drawable/famm"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/view_more_title"
                    android:textSize="20sp"
                    android:id="@+id/title"
                    android:textColor="@color/colorblack"


                    />

            </LinearLayout>





            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/view_more_date"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp">
                </TextView>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_more_description"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:orientation="horizontal" android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp">
                </TextView>
            </LinearLayout>





            <LinearLayout
                android:orientation="horizontal" android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal" android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                <Button
                    android:id="@+id/vizq"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:background="@drawable/izq" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal" android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                <Button
                    android:id="@+id/vder"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:background="@drawable/der" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
</LinearLayout>
